--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
     "vite": "^6.0.3"
   }
 }
